# Inference-Profiling-and-Optimization-Worklog

./: DOCKER_README.md  README.md
.github/workflows/: build-gemlite-autotune.yml  build-torchao-float8.yml  build-torchinductor-cudagraph.yml
common_utils/: pyproject.toml
common_utils/scripts/: convert_hf_checkpoint.py  download.py  prepare.sh
gemlite_autotune/: Dockerfile  entrypoint.sh  pyproject.toml
torchao_float8/: Dockerfile  README.md  entrypoint.sh  pyproject.toml
torchao_float8/llama_benchmark/: .gitattributes  Meta-Llama-3.1-8B_None_torch_execution_profiler.json  Meta-Llama-3.1-8B_None_torch_memory_profiler.pickle  Meta-Llama-3.1-8B_float8dq-tensor_torch_execution_profiler.json  Meta-Llama-3.1-8B_float8dq-tensor_torch_memory_profiler.pickle  Meta-Llama-3.1-8B_torch_execution_profiler.json  README.md  benchmark_results.txt  generate.py
torchinductor_cudagraph_memory/: Dockerfile  entrypoint.sh  pyproject.toml
