[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "scripts"
module-root = ""

[project]
name = "common-utils"
version = "0.1.0"
description = "Common code like model definitions used across problems."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Vipul Sharma", email = "vipuls181999@gmail.com" }
]
dependencies = [
    "torch==2.8.0",
    "torchao==0.13.0",
    "huggingface_hub",
    "hf_transfer",
    "safetensors",
    "requests",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchao = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true