[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "llama_mxfp8"
module-root = ""

[project]
name = "gemlite-autotune"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Vipul Sharma", email = "vipuls181999@gmail.com" }
]
dependencies = [
    "torch==2.8.0",
    "gemlite>=0.5.1",
]

[tool.uv]
python-preference = "only-managed"

[tool.uv.sources]
gemlite = { git = "https://github.com/dropbox/gemlite.git" }
torch = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true