[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "llama_cudagraph"
module-root = ""

[project]
name = "torchinductor_cudagraph_memory"
version = "0.1.0"
description = "Reproducing the memory overhead introduced by torch dynamo, inductor, and cudagraphs."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Vipul Sharma", email = "vipuls181999@gmail.com" }
]
dependencies = [
    "torch==2.8.0",
]

[tool.uv]
python-preference = "only-managed"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchao = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true